--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="project-card">
         <h3>Habit Tracker</h3>
         <p>Track daily habits and streaks with a gamified design.</p>
-        <a href="#">GitHub Repo</a>
+        <a href="https://zhussainn.github.io/habit-tracker/">GitHub Repo</a>
       </div>
 
       <div class="project-card">
