--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
   <!-- About Section -->
   <section id="about" data-aos="fade-up">
     <h2>About Me</h2>
-    <p>I’m a Bachelor of Software Engineering student passionate about building apps, analyzing systems, and solving real-world problems.</p>
+    <p>I’m Zahtoon Hussain, a passionate Software Engineering student with a strong focus on web development, 
+      cloud technologies, and intelligent systems. I enjoy building practical, user-focused applications that solve real-world problems, 
+      from inventory management systems to dynamic web apps. With hands-on experience in JavaScript, HTML, CSS, Firebase, and cloud integration, 
+      I strive to create solutions that are both functional and visually engaging. 
+      I’m constantly exploring new technologies and techniques to improve my coding skills and bring ideas to life. 
+      When I’m not coding, I enjoy learning about software design patterns, AI modeling, and tech innovations that shape the future. 
+      My goal is to contribute to projects that make an impact and continue growing as a full-stack developer.</p>
   </section>
 
   <!-- Skills Section -->
