--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="project-card">
         <h3>Mini SecondSpaceSA</h3>
         <p>A demo e-commerce site with products and a cart system.</p>
-        <a href="#">GitHub Repo</a>
+        <a href="https://zhussainn.github.io/SecondSpaceSA/">GitHub Repo</a>
       </div>
     </div>
   </section>
@@ -105,7 +105,7 @@
     <a href="https://github.com/ZHussainn" target="_blank">GitHub</a> | 
     <a href="https://www.linkedin.com/in/zahtoon-hussain-551508321/" target="_blank">LinkedIn</a> |
     <a href="mailto:zahtoonhussain260@gmail.com">Email</a>|
-    <a href="Zahtoon-CV.pdf" download>Download CV</a>
+    
 
   </section>
 
